force-app/main/default/objects/copado__UISection__mdt/copado__UISection__mdt.object-meta.xml
<CustomObject>
    <label>UISection</label>
    <pluralLabel>UISections</pluralLabel>
</CustomObject>