force-app/main/default/objects/copado__UISection__mdt/fields/copado__Component__c.field-meta.xml
<CustomField>
    <fullName>copado__Component__c</fullName>
    <label>Component</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>