force-app/main/default/objects/copado__UISection__mdt/fields/copado__Location__c.field-meta.xml
<CustomField>
    <fullName>copado__Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>