force-app/main/default/objects/copado__UISection__mdt/fields/copado__TestTool__c.field-meta.xml
<CustomField>
    <fullName>copado__TestTool__c</fullName>
    <label>Test Tool</label>
    <referenceTo>copado__TestTool__mdt</referenceTo>
    <relationshipLabel>UISections</relationshipLabel>
    <relationshipName>UISections</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>